<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@drawable/background_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/alertDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_alert"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/black"
            android:padding="12dp" />
        <TextView
            android:id="@+id/alertDialogSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/alert_selection_will_show_here"
            android:textColor="#800000"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/datePickerDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/black"
            android:padding="12dp" />
        <TextView
            android:id="@+id/datePickerSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date_selection_will_show_here"
            android:textColor="#800000"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/timePickerDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/black"
            android:padding="12dp" />
        <TextView
            android:id="@+id/timePickerSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/time_selection_will_show_here"
            android:textColor="#800000"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/customDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_custom_dialog"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/black"
            android:padding="12dp" />
        <TextView
            android:id="@+id/customDialogSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/custom_dialog_input_will_show_here"
            android:textColor="#800000"
            android:gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
